--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./app:/var/www
+      - ./app:/var/www/web
     links: 
       - database
   database:
